--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
         
     - name: Build Docker Image
       run: |
-        docker build john1987/docker-graphql:0.0.2 .
+        docker build -t john1987/docker-graphql:0.0.2 .
         
     - name: Push Docker Image
       run: |
