--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,21 +30,23 @@ jobs:
       env:
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
         
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION!!!!!!"
         
-#     - name: Build Docker Image
-#       run: |
-#         docker build -t john1987/docker-graphql:0.0.2 .
-#         docker build -t john1987/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t john1987/docker-graphql:$NEW_VERSION .
+        docker build -t john1987/docker-graphql:latest .
         
-#     - name: Push Docker Image
-#       run: |
-#         docker push john1987/docker-graphql:0.0.2
-#         docker push john1987/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push john1987/docker-graphql:$NEW_VERSION
+        docker push john1987/docker-graphql:latest
         
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
